Version 10.46 - 10 July 2008

- authentication:
  o add back fix to force the password to be utf8 (#23273)
  o fix reading md5/shadow options in /etc/pam.d/system-auth
- finish-install: log in syslog

Version 10.45 - 09 July 2008

- update autologin file path for kdm4
- default to KDE4 (instead of KDE) if kdm config exists when reading
  autologin configuration
- change default authentication to local (instead of ldap)

Version 10.43 - 04 July 2008

- detect KDE4 when configuring autologin

Version 10.39 - 25 June 2008

- bootloader-config:
  o fix handling xen kernels: it should not replace an existing 'linux'
    entry (#40865)
- service_harddrake:
  o handle nvidia173.ko (new legacy series of the proprietary driver)

Version 10.37 - 18 June 2008

- handle jpeg icons (needed for next rpmdrake)
- draksound:
  o do not set snd-ac97-codec's "power_save=1" options on MIPS

Version 10.34 - 12 June 2008

- partitioning wizard:
  o do not propose to resize "hidden" fat partitions
  o do not say "the Windows partition" when there can be more than one
- allow mounting ntfs-3g partitions
  (also fixes detection of Windows partitions during live installation)
- service_harddrake:
  o do not allow fbdev if /proc/fb is empty
  o fix kbluetooth config path
  o fix autoconfiguration of harddisks
- drakupdate_fstab: make sure removable disks are not fs-checked on boot
  (regression introduced in 10.6.3)
- handle renamed drivers:
  o ide-cd is now named ide-cd_mod
  o generic is now named ide-pci-generic
- authentication:
  o add Kerberos Support
  o add disconnected mode for Ldap, Kerberos, Windows auth
  o add more options in Ldap configuration: Fetch DN, TLS
  o remove Active Directory SFU
  o change Winbind authentification to enable domain model choice (NT4 or AD)

Version 10.33 - 29 May 2008

- drakboot:
  o only read bootloader configuration when configuring it
    (usefull in chroots)
- draksound:
  o be more robust when managing /etc/alsa/pulse-default.conf
- drakbug: