@@ -1,3 +1,5 @@
+- fix reading and setting kdmrc (by resolving alternative in chroot)
+
 Version 10.46 - 10 July 2008
 
 - authentication:
